syntax = "proto3";

package app.grapheneos.networklocation.proto;

option java_outer_classname = "AppleWpsProtos";

message Request {
  repeated BssidWrapper bssid_wrapper = 2;
  int32 max_number_of_results = 4;
}

message BssidWrapper {
  string bssid = 1;
}

message Response {
  repeated AccessPoint access_point = 2;
}

message AccessPoint {
  string bssid = 1;
  optional PositioningData positioning_data = 2;
}

message PositioningData {
  int64 latitude = 1;
  int64 longitude = 2;
  int64 accuracy_meters = 3;
  int64 unknown_4 = 4;
  int64 altitude_meters = 5;
  int64 vertical_accuracy_meters = 6;
}
